--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ a {
     bottom: 40px;
     margin-left: -50px;
     text-align: center;
-    line-height: 100px;
+    line-height: 105px;
     width: 100px;
     height: 100px;
     background: #000 url(../images/noise.png) repeat;
@@ -122,7 +122,7 @@ a {
     transform: scale(1) rotate(0deg);
 }
 
-.circle-link:hover { background: #b51515 url(../images/noise.png) repeat; color: #fff; }
+.circle-link:hover { background: darkorange; url(../images/noise.png) repeat; color: #fff; }
 
 .container h2 {
     position: absolute;
@@ -662,10 +662,27 @@ p.success {
 
 
 h1 {
-    font-size: 90px;
-    color: white;
-    margin-top: 85px;
+    font-size: 70px;
+    color: darkorange;
+    margin-top: 95px;
+    font-family: 'Codystar', cursive;
+    font-weight: bold;
 }
+
+.kern {
+    color: yellow;
+    position: relative;
+    left: -10px;
+}
+
+.yellow{
+    color: darkorange;
+}
+
+.dark {
+    color: black;
+}
+
 
 .circle {
     background: rgba(0, 0, 0, 0.71);
